--- a/Labs/public/index.html
+++ b/Labs/public/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hello! Welcome to my site!</h1>
-            <p><a href='/sysinfo'>Get info about this system</a></p>
+            <p><a href='/public'>Show log</a></p>
     </body>
 </html>
